Corrected ridiculous errors in MA 56. <eyeroll>

--- a/01_agama/madhyama/MA_056.md
+++ b/01_agama/madhyama/MA_056.md
@@ -2,103 +2,130 @@
 layout: default
 title: 'The Medium Discourses | Chapter 5: Related to Training | 56. Meghiya'
 type: kramdown
-base: ../../
+base: ../../../
 previous: MA_055.html
 next: MA_057.html
 ---
 
-# [The Medium Discourses](index.html)
-## Chapter 5: Related to Training
-### 56. Meghiya
+<h1><a href='index.html'>The Medium Discourses</a></h1>
+<h2>Chapter 5: Related to Training</h2>
 
-Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha traveled to Magadha and stayed at a cave in the dense mango forest near the village of Jantu.[\[2\]](#n2){:#ref2}
+<table class="trans">
+  <th class='ch'>(五六) 中阿含習相應品 彌醯經第十五 (初一日誦)</th>
+  <th class='en'>56. Meghiya</th>
+  <tr>
+    <td class='ch' title='t26.1.491a16'>我聞如是： 一時，佛遊摩竭陀國，在闍鬪村、莽㮈林窟。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha traveled to Magadha and was staying at a cave in the dense mango forest near the village of Jantu.<sup id="ref2"><a href="#n2">2</a></sup></td>
+  </tr>
+  <tr>
+    <td class='ch' title='t26.1.491a17'>爾時，尊者彌醯為奉侍者。 於是，尊者彌醯過夜平旦著衣，持鉢，入闍鬪村，而行乞食。 乞食已竟，往至金鞞河邊。 見地平正名好㮈林。 金鞞河水極妙、可樂。 清泉徐流冷暖、和適。 見已，歡喜便作是念： 「此地平正名好㮈林。 金鞞河水極妙、可樂。 清泉徐流冷暖、和適。 若族姓子欲學斷者，當於此處。 我亦有所斷。 寧可在此靜處學斷耶？」</td>
+    <td id='p2'>2. Venerable Meghiya<sup id="ref3"><a href="#n3">3</a></sup> was serving as his attendant at the time. After the night had passed and the sun rose, Venerable Meghiya put on his robe, took his bowl into Jantu, and walked about soliciting alms. When he was finished soliciting alms, he went to the side of the *Kimba River<sup id="ref4"><a href="#n4">4</a></sup>. There, he saw the level plain of a famously beautiful mango grove. The water of the river was sublime and delightful. It was both warm and cool and flowed slowly and serenely from a clear spring. When he saw this, he rejoiced and thought, “This level plain is a famously beautiful mango grove. The water of the river is sublime and delightful. It’s both warm and cool and flows slowly and serenely from a clear spring. If a clansman wanted to work towards ending the afflictions<sup id="ref5"><a href="#n5">5</a></sup>, he could do it here. I have some to end myself. Shouldn’t I work towards ending them here in this peaceful place?”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t26.1.491a24'>於是，彌醯食訖中後擧衣鉢已，澡洗手足。 以尼師檀著於肩上，往詣佛所。 稽首禮足，却住一面，白曰： 「世尊，我今平旦著衣持鉢，入闍鬪村而行乞食。 乞食已竟，往至金鞞河邊。 見地平正名好㮈林。 金鞞河水極妙、可樂。 清泉徐流冷暖、和適。 我見喜已，便作是念： 『此地平正名好㮈林。 金鞞河水極妙、可樂。 清泉徐流冷暖、和適。 若族姓子欲學斷者，當於此處。 我亦有所斷。 寧可在此靜處學斷耶？』 世尊，我今欲往至彼㮈林靜處，學斷。」</td>
+    <td id='p3'>3. When he finished his meal that afternoon, Meghiya picked up his robe and bowl and washed his hands and feet. He put his sitting mat over his shoulder and went back to the Buddha. He then bowed his head at the Buddha’s feet, withdrew to stand to one side, and said, “Bhagavān, this morning, I put on my robe, took my bowl into Jantu, and walked about soliciting alms. When I was finished soliciting alms, I went to the side of the Kimba River. There, I saw the level plain of a famously beautiful mango grove. The water of the river was sublime and delightful. It was both warm and cool and flowed slowly and serenely from a clear spring. When I saw this, I rejoiced and thought, ‘This level plain is a famously beautiful mango grove. The water of the river is sublime and delightful. It’s both warm and cool and flows slowly and serenely from a clear spring. If a clansman wanted to work towards ending the afflictions, he could do it here. I have some to end myself. Shouldn’t I work towards ending them here in this peaceful place?’ Bhagavān, I’d like to go now to a quiet place in that mango grove and work towards ending my afflictions.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t26.1.491b5'>爾時，世尊告曰： 「彌醯，汝今知不？ 我獨。 無人，無有侍者。 汝可小住，須比丘來為吾侍者。 汝便可去，至彼㮈林靜處，而學。」</td>
+    <td id='p4'>4. The Bhagavān then said, “Now, Meghiya, don’t you realize? I’m alone here. There aren’t any people, and I would have no attendant. You can stay there a little while, but a monk needs to come to be my attendant. Then, you can go train at a peaceful place in that mango grove.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t26.1.491b8'>尊者彌醯乃至再三白曰： 「世尊，我今欲往至彼㮈林靜處，學斷。」</td>
+    <td id='p5'>5. <em>Venerable Meghiya repeated himself three times:</em> “… Bhagavān, I’d like to go now to a quiet place in that mango grove and work towards ending my afflictions.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t26.1.491b10'>世尊亦復再三告曰： 「彌醯，汝今知不？ 我獨。 無人，無有侍者。 汝可小住，須比丘來為吾侍者。 汝便可去，至彼㮈林靜處，而學。」</td>
+    <td><em>The Bhagavān also repeated himself three times:</em> “Now, Meghiya, don’t you realize? I’m alone here. There aren’t any people, and I would have no attendant. You can stay there a little while, but a monk needs to come to be my attendant. Then, you can then go train at a peaceful place in that mango grove.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t26.1.491b12'>彌醯復白曰： 「世尊無為，無作，亦無所觀。 世尊，我有為，有作，而有所觀。 世尊，我至彼㮈林靜處，學斷。」</td>
+    <td id='p6'>6. Meghiya again said, “The Bhagavān has nothing to do, no task, and nothing to contemplate. Bhagavān, I have more to do, a task, and something to contemplate. Bhagavān, I’m going to a peaceful place in that mango grove to work towards ending my afflictions.”<sup id="ref6"><a href="#n6">6</a></sup></td>
+  </tr>
+  <tr>
+    <td class='ch' title='t26.1.491b15'>世尊告曰： 「彌醯，汝欲求斷者，我復何言？ 彌醯，汝去隨意所欲。」</td>
+    <td>The Bhagavān told him, “Meghiya, if you want to pursue the end to your afflictions, what can I say? Meghiya, go ahead and do as you like.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t26.1.491b16'>於是，尊者彌醯聞佛所説，善受，善持，而善誦習。 即禮佛足，繞三匝，而去，詣彼㮈林。 入林中已，至一樹下，敷尼師檀，結加趺坐。</td>
+    <td id='p7'>7. Venerable Meghiya then had well accepted, well remembered, and well recited what the Buddha had taught. He bowed at the Buddha’s feet, circled him three times, and departed for the mango grove. Having entered the mango grove, he went to a tree, spread his sitting mat out under it, and sat cross-legged.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t26.1.491b19'>尊者彌醯住㮈林中，便生三惡、不善之念： 欲念、恚念、及與害念。 彼由此故，便念世尊。 於是，彌醯則於晡時從燕坐起，往詣佛所。 稽首禮足，却住一面，白曰： 「世尊，我至㮈林，於靜處坐，便生三惡、不善之念： 欲念、恚念、及與害念。 我由此故，便念世尊。」</td>
+    <td id='p8'>8. While Venerable Meghiya was staying in that mango grove, he had three kinds of bad and unskillful thoughts occur to him: desirous thoughts, angry thoughts, and harmful thoughts. He remembered the Bhagavān when this happened. That afternoon, he rose from his seat of repose and returned to the Buddha. He bowed his head at his feet, withdrew to stand at one side, and said, “Bhagavān, I went to the mango grove and sat in a peaceful place, but then three kinds of bad and unskillful thoughts occurred to me: desirous thoughts, angry thoughts, and harmful thoughts. I remembered the Bhagavān when that happened.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t26.1.491b25'>世尊告曰： 「彌醯，心解脫未熟。 欲令熟者有五習法。 云何為五？ 彌醯，比丘者自善知識、與善知識倶、善知識共和合。 彌醯，心解脫未熟、欲令熟者是謂第一習法。</td>
+    <td id='p9'>9. The Bhagavān told him, “Meghiya, your mind’s liberation isn’t complete yet.<sup id="ref7"><a href="#n7">7</a></sup> When someone wants to make it complete, there are five things to cultivate. What are the five? Meghiya, a monk is himself a good friend, in the company of good friends, and in harmony with good friends.<sup id="ref8"><a href="#n8">8</a></sup> Meghiya, this is the first thing to cultivate when someone wants to complete the mind’s liberation when it isn’t complete yet.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t26.1.491b28'>「復次，彌醯，比丘者修習禁戒，守護從解脫。 又復，善攝威儀、禮節。 見纖芥罪，常懷畏怖受持學戒。 彌醯，心解脫未熟、欲令熟者是謂第二習法。</td>
+    <td id='p10'>10. “Furthermore, Meghiya, a monk cultivates the precepts and protects the Pratimokṣa.<sup id="ref9"><a href="#n9">9</a></sup> His behavior and manners are also well composed. Seeing a tiny misdeed, he’s constantly anxious about maintaining his training and precepts. Meghiya, this is the second thing to cultivate when someone wants to complete the mind’s liberation when it isn’t complete yet.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t26.1.491c3'>「復次，彌醯，比丘者謂所可説聖有義，令心柔軟，使心無蓋。 謂：説戒、説定、説慧。 説解脫、説解脫知見、説漸損。 説不樂聚會、説少欲、説知足。 説斷、説無欲、説滅。 説燕坐、説縁起。 得如是比沙門所説，具得、易、不難得。 彌醯，心解脫未熟、欲令熟者是謂第三習法。</td>
+    <td id='p11'>11. “Furthermore, Meghiya, a monk can be taught about the noble aim, which makes his mind gentle and without hinderance. That is, he’s taught the precepts, taught samādhi, and taught wisdom. He’s taught liberation, taught to know and see liberation, and taught effacement. He’s taught to not enjoy company, taught to desire little, and taught satisfaction. He’s taught to end afflictions, taught the lack of desire, and taught cessation. He’s taught to sit in repose and taught dependent origination. He gets such teachings that are appropriate for an ascetic, fully, easily, and not with difficulty. Meghiya, this is the third thing to cultivate when someone wants to complete the mind’s liberation when it isn’t complete yet.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t26.1.491c9'>「復次，彌醯，比丘者常行精進，斷惡不善，修諸善法。 恒自起意專一、堅固，為諸善本不捨方便。 彌醯，心解脫未熟、欲令熟者是謂第四習法。</td>
+    <td id='p12'>12. “Furthermore, Meghiya, a monk always practices diligently to end bad and unskillful things and cultivate good things. He continuously motivates himself to be focused and stable, and he doesn’t abandon the methods for making roots of goodness. Meghiya, this is the fourth thing to cultivate when someone wants to complete the mind’s liberation when it isn’t complete yet.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t26.1.491c12'>「復次，彌醯，比丘者修行智慧，觀興衰法。 得如是智，聖慧明達，分別、曉了以正盡苦。 彌醯，心解脫未熟、欲令熟者是謂第五習法。</td>
+    <td id='p13'>13. “Furthermore, Meghiya, a monk cultivates wisdom and observes the law of arising and passing away. Attaining such knowledge, which is a noble and wise insight, he discerns and clearly understands the correct way to end suffering. Meghiya, This is the fifth thing to cultivate when someone wants to complete the mind’s liberation when it isn’t complete yet.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t26.1.491c15'>「彼有此五習法已，復修四法。 云何為四？ 修惡露令斷欲。 修慈令斷恚。 修息出息入令斷亂念。 修無常想令斷我慢。</td>
+    <td id='p14'>14. “Once he possesses these five things to cultivate, he cultivates another four things. What are the four? He contemplates the foul discharges to end desire. He cultivates kindness to end anger. He’s mindful of breathing in and out to end distracted thoughts. He cultivates the notion of impermanence to end self-pride.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t26.1.491c18'>「彌醯，若比丘自善知識、與善知識倶、善知識共和合，當知必修習禁戒，守護從解脫。 又復，善攝威儀、禮節。 見纖芥罪，常懷畏怖受持學戒。</td>
+    <td id='p15'>15. “Meghiya, if a monk is himself a good friend, in the company of good friends, and in harmony with good friends, you should know that he’ll surely cultivate the precepts and protect the Pratimokṣa. His behavior and manners will also be well-composed. Seeing a tiny misdeed, he’ll be constantly anxious about maintaining his training and precepts.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t26.1.491c21'>「彌醯，若比丘自善知識、與善知識倶、善知識共和合，當知必得所可説聖有義，令心柔軟，使心無蓋。 謂：説戒、説定、説慧。 説解脫、説解脫知見、説漸損。 説不樂聚會、説少欲、説知足。 説斷、説無欲、説滅。 説燕坐、説縁起。 得如是比沙門所説，具得、易、不難得。</td>
+    <td id='p16'>16. “Meghiya, if a monk is himself a good friend, in the company of good friends, and in harmony with good friends, you should know that he’ll surely be taught about the noble aim, which will make his mind gentle and without hindrance. That is, he’ll be taught the precepts, taught samādhi, and taught wisdom. He’ll be taught liberation, taught to know and see liberation, and taught effacement. He’ll be taught to not enjoy company, taught to desire little, and taught satisfaction. He’ll be taught to end afflictions, taught the lack of desire, and taught cessation. He’ll be taught to sit in repose and taught dependent origination. He’ll obtain such teachings that are appropriate for an ascetic fully, easily, and not with difficulty.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t26.1.491c27'>「彌醯，若比丘自善知識、與善知識倶、善知識共和合，當知必行精進，斷惡不善，修諸善法。 恒自起意專一、堅固，為諸善本不捨方便。</td>
+    <td id='p17'>17. “Meghiya, if a monk is himself a good friend, in the company of good friends, and in harmony with good friends, you should know that he’ll surely practice diligently to end bad and unskillful things and cultivate good things. He’ll continuously motivate himself to be focused and stable, and he won’t abandon the methods for making roots of goodness.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t26.1.492a1'>「彌醯，若比丘自善知識、與善知識倶、善知識共和合，當知必行智慧，觀興衰法。 得如此智，聖慧明達，分別、曉了以正盡苦。</td>
+    <td id='p18'>18. “Meghiya, if a monk is himself a good friend, in the company of good friends, and in harmony with good friends, you should know that he’ll surely cultivate wisdom and observe the law of arising and passing away. Attaining such knowledge, which is a noble and wise insight, he’ll discern and clearly understand the correct way to end suffering.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t26.1.492a4'>「彌醯，若比丘自善知識、與善知識倶、善知識共和合，當知必修惡露令斷欲。 修慈令斷恚。 修息出息入令斷亂念。 修無常想令斷我慢。</td>
+    <td id='p19'>19. “Meghiya, if a monk is himself a good friend, in the company of good friends, and in harmony with good friends, you should know that he’ll surely contemplate the foul discharges to end desire. He’ll cultivate kindness to end anger. He’ll be mindful of breathing in and out to end confused thoughts. He’ll cultivate the notion of impermanence to end self-pride.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t26.1.492a7'>「彌醯，若比丘得無常想者，必得無我想。 彌醯，若比丘得無我想者，便於現法斷一切我慢，得息、滅盡、無為、涅槃。」</td>
+    <td id='p20'>20. “Meghiya, if a monk gets the notion of impermanence, he’ll surely get the notion of selflessness. Meghiya, if a monk gets the notion of selflessness, then he’ll end all self-pride. Right here in the present, he’ll attain his rest, cessation, ending, the unconditioned, and <em>nirvāṇa</em>.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t26.1.492a10'>佛説如是。 尊者彌醯及諸比丘聞佛所説歡喜，奉行</td>
+    <td id='p21'>21. The Buddha thus spoke. When Venerable Meghiya and the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
+<hr/>
 
-Venerable Meghiya[\[3\]](#n3){:#ref3} was serving as his attendant at the time. After the night had passed and the sun rose, Venerable Meghiya[\[3\]](#n3){:#ref3} put on his robe, took his bowl into Jantu, and walked about soliciting alms. When he was finished soliciting alms, he went to the side of the \*Kimba River[\[4\]](#n4){:#ref4}. There, he saw the level plain of a famously beautiful mango grove. The water of the river was sublime and delightful. It was both warm and cool and flowed slowly and serenely from a clear spring. When he saw this, he rejoiced and thought, “This level plain is a famously beautiful mango grove. The water of the river is sublime and delightful. It’s both warm and cool and flows slowly and serenely from a clear spring. If a clansman wanted to work towards ending the afflictions[\[5\]](#n5){:#ref5}, he could do it here. I have some to end myself. Shouldn’t I work towards ending them here in this peaceful place?”
+<h3 id="notes">Notes</h3>
 
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0491a14" target="_blank">T26.1.491a14-2a12</a>. This <em>sūtra</em> is a parallel to <a href="https://suttacentral.net/an9.3" target="_blank">AN 9.3</a> and <a href="https://suttacentral.net/ud4.1" target="_blank">Ud 4.1</a>. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>Jantu</em>. C. 闍鬪村 (EMC. ʒɪă-təu = *Jatu[ṇa]). P/S. Jantu is properly G. Jaṃtu but <a href="https://gandhari.org/dictionary/ja%E1%B9%83tu" target="_blank">attested in fragments</a> as G. Jadu, Jatuṇa, and Jaduṇa. This may be a case of consonants being transposed in G. sources (Brough, 50), and the ending syllable being silent. I’ve adopted the S. equivalent. [<a href="#ref2">back</a>]</p></li>
+<li id="n3"><p><em>Meghiya</em>. C. 彌醯 (EMC. miĕhei = *Mehi), P. <em>Meghiya</em>, G. <em>Mekhiya</em>. In G., <em>gh</em> frequently becomes <em>kh</em>, but the consonants <em>g/k</em> are often weakened to fricatives or go silent. The result is that <em>-k-</em> can become <em>-y-</em> (Brough, 86), and <em>-kh-</em> can become <em>-h-</em> (Brough, 93). This scenario matches the C. transliteration (*Mehi[ya]), so I’ve adopted the S. equivalent. For a summary of Meghiya’s background, see the <a href="https://www.palikanon.com/english/pali_names/me_mu/meghiya.htm" target="_blank"><cite>Buddhist Dictionary of Pali Proper Names</cite></a>. [<a href="#ref3">back</a>]</p></li>
+<li id="n4"><p><em>Kimba River</em>. C. 金鞞河 (EMC. *Kiṃba River), P. <em>kimikāḷāya nadiyā</em>, G. ?. There’s no attestation for G. <em>Kiṃba</em> in G. sources yet, but S. <em>Kimba</em> is a kind of tree. I’ve adopted this as an educated guess. [<a href="#ref4">back</a>]</p></li>
+<li id="n5"><p><em>work toward ending the afflictions</em>. C. 學斷, P. <em>padhāna</em>, G. <em>prahana *vinedi</em>. Lit. “train in abandoning.” What Meghiya wants to abandon is left unsaid, but the likely candidates are things like suffering or affliction. The P. parallel, as is often the case, has “exertion” (P. <em>padhāna</em>) instead of “abandoning” (G. <em>prahana</em>). [<a href="#ref5">back</a>]</p></li>
+<li id="n6"><p>In AN 9.3, Meghiya repeats this objection three times, rather than his initial request, which makes him appear more impolite than this version. [<a href="#ref6">back</a>]</p></li>
+<li id="n7"><p><em>complete</em>. C. 熟. Lit. “matured,” “ripened,” or “cooked.” None of these usages really match this context, so I’ve used a more generic English equivalent. [<a href="#ref7">back</a>]</p></li>
+<li id="n8"><p><em>a good friend, being in the company of good friends, and being united with good friends</em>. C. 自善知識、與善知識倶、善知識共和合, P. <em>kalyāṇamitto hoti kalyāṇasahāyo kalyāṇasampavaṅko</em>. “Good friend” (善知識) corresponds to S. <em>kalyāṇamitra</em> (P. <em>kalyāṇamitta</em>). “In the company of” (與 … 倶) corresponds better with S. <em>sahāyana</em> or <em>sahāyatva</em>, which mean “companionship” or “association” respectively, than it does with P/S. <em>sahāya</em> (“a companion”). “In harmony with” (共和合) is also difficult to relate to P. <em>sampavaṅka</em>. 共和合 corresponds with P. <em>samagga</em> (G. <em>samagra</em>) in other parallels. To give a few examples: Aniruddha’s description of his relationship with his companions in MĀ 72/MN 128 and MĀ 185/MN 31, at the end of the summary verses of MĀ 122/AN 8.10, and Varsakāra’s questions to Ānanda in MĀ 145/MN 108.</p>
+<p>Having pointed this out, however, doesn’t invalidate the Pali reading, for we can see it mirrored in other Chinese parallels such as SĀ 12.14 (914), which appears to have the same three synonyms for “friends” that we find in Theravāda <em>sutta</em>s. [<a href="#ref8">back</a>]</p></li>
+<li id="n9"><p><em>Pratimokṣa.</em> C. 從解脫, P. <em>pātimokkha</em>. The Chinese translator has rendered Pratimokṣa as “Conformance with (從 = <em>prati-</em>) Liberation (解脫 = <em>-mokṣa</em>).” I’ve converted the translation back to Sanskrit for clarity. [<a href="#ref9">back</a>]</p></li>
+</ol>
+<hr/>
 
-When he finished his meal that afternoon, Meghiya picked up his robe and bowl and washed his hands and feet. He put his sitting mat over his shoulder and went back to the Buddha. He then bowed his head at the Buddha’s feet, withdrew to stand to one side, and said, “Bhagavān, this morning, I put on my robe, took my bowl into Jantu, and walked about soliciting alms. When I was finished soliciting alms, I went to the side of the Kimba River. There, I saw the level plain of a famously beautiful mango grove. The water of the river was sublime and delightful. It was both warm and cool and flowed slowly and serenely from a clear spring. When I saw this, I rejoiced and thought, ‘This level plain is a famously beautiful mango grove. The water of the river is sublime and delightful. It’s both warm and cool and flows slowly and serenely from a clear spring. If a clansman wanted to work towards ending the afflictions, he could do it here. I have some to end myself. Shouldn’t I work towards ending them here in this peaceful place?’ Bhagavān, I’d like to go now to a quiet place in that mango grove and work towards ending my afflictions.”
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 8 April 2023</p>
 
-
-The Bhagavān then said, “Now, Meghiya, don’t you realize? I’m alone here. There aren’t any people, and I would have no attendant. You can stay there a little while, but a monk needs to come to be my attendant. Then, you can go train at a peaceful place in that mango grove.”
-
-
-<em>Venerable Meghiya repeated himself three times:</em> “… Bhagavān, I’d like to go now to a quiet place in that mango grove and work towards ending my afflictions.”
-
-
-<em>The Bhagavān also repeated himself three times:</em> “Now, Meghiya, don’t you realize? I’m alone here. There aren’t any people, and I would have no attendant. You can stay there a little while, but a monk needs to come to be my attendant. Then, you can then go train at a peaceful place in that mango grove.”
-
-
-Meghiya again said, “The Bhagavān has nothing to do, no task, and nothing to contemplate. Bhagavān, I have more to do, a task, and something to contemplate. Bhagavān, I’m going to a peaceful place in that mango grove to work towards ending my afflictions.”[\[6\]](#n6){:#ref6}
-
-
-The Bhagavān told him, “Meghiya, if you want to pursue the end to your afflictions, what can I say? Meghiya, go ahead and do as you like.”
-
-
-Venerable Meghiya then had well accepted, well remembered, and well recited what the Buddha had taught. He bowed at the Buddha’s feet, circled him three times, and departed for the mango grove. Having entered the mango grove, he went to a tree, spread his sitting mat out under it, and sat cross-legged.
-
-
-While Venerable Meghiya was staying in that mango grove, he had three kinds of bad and unskillful thoughts occur to him: desirous thoughts, angry thoughts, and harmful thoughts. He remembered the Bhagavān when this happened. That afternoon, he rose from his seat of repose and returned to the Buddha. He bowed his head at his feet, withdrew to stand at one side, and said, “Bhagavān, I went to the mango grove and sat in a peaceful place, but then three kinds of bad and unskillful thoughts occurred to me: desirous thoughts, angry thoughts, and harmful thoughts. I remembered the Bhagavān when that happened.”
-
-
-The Bhagavān told him, “Meghiya, your mind’s liberation isn’t complete yet. When someone wants to make it complete, there are five things to cultivate. What are the five? Meghiya, a monk is himself a good friend, in the company of good friends, and in harmony with good friends[\[1\]](#n1){:#ref1}. Meghiya, this is the first thing to cultivate when someone wants to complete the mind’s liberation when it isn’t complete yet.
-
-
-“Furthermore, Meghiya, a monk cultivates the precepts and protects the Pratimokṣa.[\[7\]](#n7){:#ref7} His behavior and manners are also well composed. Seeing a tiny misdeed, he’s constantly anxious about maintaining his training and precepts. Meghiya, this is the second thing to cultivate when someone wants to complete the mind’s liberation when it isn’t complete yet.
-
-
-“Furthermore, Meghiya, a monk can be taught about the noble aim, which makes his mind gentle and without hinderance. That is, he’s taught the precepts, taught samādhi, and taught wisdom. He’s taught liberation, taught to know and see liberation, and taught effacement. He’s taught to not enjoy company, taught to desire little, and taught satisfaction. He’s taught to end afflictions, taught the lack of desire, and taught cessation. He’s taught to sit in repose and taught dependent origination. He gets such teachings that are appropriate for an ascetic, fully, easily, and not with difficulty. Meghiya, this is the third thing to cultivate when someone wants to complete the mind’s liberation when it isn’t complete yet.
-
-
-“Furthermore, Meghiya, a monk always practices diligently to end bad and unskillful things and cultivate good things. He continuously motivates himself to be focused and stable, and he doesn’t abandon the methods for making roots of goodness. Meghiya, this is the fourth thing to cultivate when someone wants to complete the mind’s liberation when it isn’t complete yet.
-
-
-“Furthermore, Meghiya, a monk cultivates wisdom and observes the law of arising and passing away. Attaining such knowledge, which is a noble and wise insight, he discerns and clearly understands the correct way to end suffering. Meghiya, This is the fifth thing to cultivate when someone wants to complete the mind’s liberation when it isn’t complete yet.
-
-
-“Once he possesses these five things to cultivate, he cultivates another four things. What are the four? He contemplates the foul discharges to end desire. He cultivates kindness to end anger. He’s mindful of breathing in and out to end distracted thoughts. He cultivates the notion of impermanence to end self-pride.
-
-
-“Meghiya, if a monk is himself a good friend, in the company of good friends, and in harmony with good friends, you should know that he’ll surely cultivate the precepts and protect the Pratimokṣa. His behavior and manners will also be well-composed. Seeing a tiny misdeed, he’ll be constantly anxious about maintaining his training and precepts.
-
-
-“Meghiya, if a monk is himself a good friend, in the company of good friends, and in harmony with good friends, you should know that he’ll surely be taught about the noble aim, which will make his mind gentle and without hindrance. That is, he’ll be taught the precepts, taught samādhi, and taught wisdom. He’ll be taught liberation, taught to know and see liberation, and taught effacement. He’ll be taught to not enjoy company, taught to desire little, and taught satisfaction. He’ll be taught to end afflictions, taught the lack of desire, and taught cessation. He’ll be taught to sit in repose and taught dependent origination. He’ll obtain such teachings that are appropriate for an ascetic fully, easily, and not with difficulty.
-
-
-“Meghiya, if a monk is himself a good friend, in the company of good friends, and in harmony with good friends, you should know that he’ll surely practice diligently to end bad and unskillful things and cultivate good things. He’ll continuously motivate himself to be focused and stable, and he won’t abandon the methods for making roots of goodness.
-
-
-“Meghiya, if a monk is himself a good friend, in the company of good friends, and in harmony with good friends, you should know that he’ll surely cultivate wisdom and observe the law of arising and passing away. Attaining such knowledge, which is a noble and wise insight, he’ll discern and clearly understand the correct way to end suffering.
-
-
-“Meghiya, if a monk is himself a good friend, in the company of good friends, and in harmony with good friends, you should know that he’ll surely contemplate the foul discharges to end desire. He’ll cultivate kindness to end anger. He’ll be mindful of breathing in and out to end confused thoughts. He’ll cultivate the notion of impermanence to end self-pride.
-
-
-“Meghiya, if a monk gets the notion of impermanence, he’ll surely get the notion of selflessness. Meghiya, if a monk gets the notion of selflessness, then he’ll end all self-pride. Right here in the present, he’ll attain his rest, cessation, ending, the unconditioned, and <em>nirvāṇa</em>.”
-
-
-The Buddha thus spoke. When Venerable Meghiya and the monks heard what the Buddha taught, they rejoiced and approved.
-
----
-
-### Notes
-
-1. {:#n1} For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0491a14" target="_blank">T26.1.491a14-2a11</a>. This <em>sūtra</em> is a parallel to [AN 9.3](https://suttacentral.net/an9.3){: target="_blank"} and [Ud 4.1](https://suttacentral.net/ud4.1){: target="_blank"}. [\[back\]](#ref1)
-2. {:#n2} <em>Jantu</em>. C. <span class="ch">闍鬪村</span> (EMC. ʒɪă-təu = *Jatu[ṇa]). P/S. Jantu is properly G. Jaṃtu but [attested in fragments](https://gandhari.org/dictionary/ja%E1%B9%83tu) as G. Jadu, Jatuṇa, and Jaduṇa. This may be a case of consonants being transposed in G. sources (Brough, 50), and the ending syllable being silent. I’ve adopted the S. equivalent. [\[back\]](#ref2)
-3. {:#n3} <em>Meghiya</em>. C. <span class="ch">彌醯</span> (EMC. miĕhei = \*Mehi), P. Meghiya, G. Mekhiya. In G., <em>gh</em> frequently becomes <em>kh</em>, but the consonants <em>g/k</em> are often weakened to fricatives or go silent. The result is that <em>-k-</em> can become <em>-y-</em> (Brough, 86), and <em>-kh-</em> can become <em>-h-</em> (Brough, 93). This scenario matches the C. transliteration (\*Mehi[ya]), so I’ve adopted the S. equivalent. For a summary of Meghiya’s background, see the [Buddhist Dictionary of Pali Proper Names](https://www.palikanon.com/english/pali_names/me_mu/meghiya.htm){: target="_blank"}. [\[back\]](#ref3)
-4. {:#n4} <em>Kimba River</em>. C. <span class="ch">金鞞河</span> (EMC. *Kiṃba River), P. <em>kimikāḷāya nadiyā</em>, G. ?. There’s no attestation for G. Kiṃba in G. sources yet, but S. Kimba is a kind of tree. I’ve adopted this as an educated guess. [\[back\]](#ref4)
-5. {:#n5} <em>work toward ending the afflictions</em>. C. <span class="ch">學斷</span>, P. <em>padhāna</em>, G. <em>prahana *vinedi</em>. Lit. “train in abandoning.” What Meghiya wants to abandon is left unsaid, but the likely candidates are things like suffering or affliction. The P. parallel, as is often the case, has “exertion” (P. <em>padhāna</em>) instead of “abandoning” (G. <em>prahana</em>). [\[back\]](#ref5)
-6. {:#n6} In AN 9.3, Meghiya repeats this objection three times, rather than his initial request, which makes him appear more impolite than this version. [\[back\]](#ref6)
-1. {:#n1} <em>complete</em>. C. 熟. Lit. “matured,” “ripened,” or “cooked.” None of these usages really match this context, so I’ve used a more generic English equivalent. [\[back\]](#ref1)
-1. {:#n1} <em>a good friend, being in the company of good friends, and being united with good friends</em>. C. <span class="ch">自善知識、與善知識倶、善知識共和合</span>, P. <em>kalyāṇamitto hoti kalyāṇasahāyo kalyāṇasampavaṅko</em>. “Good friend” (<span class="ch">善知識</span>) corresponds to S. <em>kalyāṇamitra</em> (P. <em>kalyāṇamitta</em>). “In the company of” (<span class="ch">與 … 倶</span>) corresponds better with S. <em>sahāyana</em> or <em>sahāyatva</em>, which mean “companionship” or “association” respectively, than it does with P/S. <em>sahāya</em> (“a companion”). “In harmony with” (<span class="ch">共和合</span>) is also difficult to relate to P. <em>sampavaṅka</em>. <span class="ch">共和合</span> corresponds with P. <em>samagga</em> (G. <em>samagra</em>) in other parallels. To give a few examples: Aniruddha’s description of his relationship with his companions in MĀ 72/MN 128 and MĀ 185/MN 31, at the end of the summary verses of MĀ 122/AN 8.10, and Varsakāra’s questions to Ānanda in MĀ 145/MN 108.<br/>
-Having pointed this out, however, doesn’t invalidate the Pali reading, for we can see it mirrored in other Chinese parallels such as SĀ 12.14 (914), which appears to have the same three synonyms for “friends” that we find in Theravāda suttas. [\[back\]](#ref1)
-7. {:#n7} <em>Pratimokṣa.</em> C. <span class="ch">從解脱</span>, P. <em>pātimokkha</em>. The Chinese translator has rendered Pratimokṣa as “Conformance with (從 = prati-) Liberation (<span class="ch">解脱</span> = -mokṣa).” I’ve converted the translation back to Sanskrit for clarity. [\[back\]](#ref7)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 8 April 2023
-{: .revised}
-
----
+<hr/>
